# rust_weather_station

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
